move footer to layout

--- a/src/views/tables.hbs.html
+++ b/src/views/tables.hbs.html
@@ -1,6 +1,6 @@
 {{#layoutHelper title=title menu='tables' header='!%css slot%!' footer='!%js slot%!'}}
   <script type="application/javascript">
-    window.breadcrumbs = [{name: 'Table'}];
+    window.breadcrumbs = [{name: 'Tables'}];
   </script>
   <div id="content-wrapper">
 
@@ -55,16 +55,5 @@
       </p>
 
     </div>
-    <!-- /.container-fluid -->
-
-    <!-- Sticky Footer -->
-    <footer class="sticky-footer">
-      <div class="container my-auto">
-        <div class="copyright text-center my-auto">
-          <span>Copyright © Your Website 2018</span>
-        </div>
-      </div>
-    </footer>
-
   </div>
 {{/layoutHelper}}
