--- a/src/views/partial/layout.hbs.html
+++ b/src/views/partial/layout.hbs.html
@@ -228,5 +228,12 @@
 
 </script>
 {{{layout.footer}}}
+<footer class="sticky-footer">
+  <div class="container my-auto">
+    <div class="copyright text-center my-auto">
+      <span>Copyright © Your Website 2018</span>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
