--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -1,4 +1,4 @@
-@import "bootstrap-basic";
+@import "variables";
 @import "../../node_modules/bootstrap/scss/root";
 @import "../../node_modules/bootstrap/scss/reboot";
 @import "../../node_modules/bootstrap/scss/type";
