--- a/src/views/index.hbs.html
+++ b/src/views/index.hbs.html
@@ -1,4 +1,4 @@
-{{#layout title='首页'}}
+{{#layoutHelper title='首页' header='!%css slot%!' footer='!%js slot%!'}}
 <main role="main">
 
   <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -35,4 +35,4 @@
   </div> <!-- /container -->
 
 </main>
-{{/layout}}
+{{/layoutHelper}}
